--- a/TheWeb/src/app/cart/cart.component.html
+++ b/TheWeb/src/app/cart/cart.component.html
@@ -57,7 +57,7 @@
                             </td>
                         </tr>
                         <tr *ngIf="address">
-                            <td class="text-left">Delivered to</td>
+                            <td class="text-left">Deliver to</td>
                             <td>
                                 <div>
                                     {{address}}
