--- a/TheWeb/src/app/header.component.html
+++ b/TheWeb/src/app/header.component.html
@@ -152,9 +152,14 @@
                     </div>
                     <div class="language_selector sticky-hide">
                         <div class="form-language">
+                            <div class="input-group">
+                                <input type="text" placeholder="Search" class="form-control">
+                                <span class="input-group-btn">
+                                    <button type="submit" class="btn btn-continue"><i class="fa fa-search"></i></button>
+                                </span>
+                            </div>
                             <!--<input type="text" class="expand-textbox">-->
-                            <input type="text" placeholder="Search" class="expand-textbox">
-                            <button type="submit" class="input-group-addon"><i class="fa fa-search"></i></button>
+                            
                         </div>
                     </div>
                 </div>
