--- a/TheWeb/src/app/home/productdetails.component.html
+++ b/TheWeb/src/app/home/productdetails.component.html
@@ -1,111 +1,90 @@
-﻿<div class="main-container col1-layout">
+﻿<div class="main-container">
     <div *ngIf="statusMessage" class="alert alert-success"><strong>{{statusMessage}}</strong></div>
-    <div class="main">
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-md-5">
+            <div class="product-box prod-img-box" *ngIf="images">
+                <img [attr.id]="'image-'+index"
+                     *ngFor="let img of images;let index=index"
+                     [ngClass]="index == 0 ? visible : 'prod-img-hide'"
+                     class="gallery-image" src="{{img.ImageUrl}}" />
 
-        <div class="col-main">
+            </div>
 
-            <div class="product-view">
-                <div class="product-essential">
-                    <form method="post" id="product_addtocart_form">
-                        <div class="product-img-box">
+            <div class="product-box">
+                <a *ngFor="let img of images;let index=index" class="thumb-link handtool" (click)="displayImage(index)">
+                    <img src="{{img.ImageUrl}}" width="75" height="75" alt="">
+                </a>
+            </div>
 
-                            <div class="product-image product-image-zoom zoom-available">
-                                <div class="product-image-gallery" *ngIf="images">
-                                    <img [attr.id]="'image-'+currentElementIndex"
-                                         *ngFor="let img of images;let currentElementIndex=index"
-                                         [ngClass]="currentElementIndex==0 ? visible : ''"
-                                         class="gallery-image" src="{{img.ImageUrl}}" />
+        </div>
+        <div class="col-md-5" *ngIf="product">
+            <div class="product-box">
+                <div [innerHTML]="product.ProductShortDesc" class="product-subtitle"></div>
+                <div class="product-name">
+                    <span [innerHTML]="product.ProductName" class="h1"></span>
+                </div>
+                <!--[innerHTML]="product.ProductLongDesc"-->
+                <div class="sharing-links" [innerHTML]="product.ProductLongDesc"></div>
+                <div class="price-info">
+                    <strong class="price">{{product.ProductPrice | currency:'INR':'symbol'}}</strong>
+                </div>
+                <div class="cart-info row">
+                    <div class="col-md-2">
+                        <input id="prodqty" class="input-text qty" type="text" maxlength="12" value="1" pattern="\d*">
+                    </div>
+                    <div class="col-md-6">
+                        <button (click)="addToCart(product);" type="button" title="Add to Cart" class="checkout-button">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
 
-                                </div>
-                            </div>
-
-
-                            <div class="more-views">
-                                <div class="swiper-container swiper-container-vertical">
-                                    <div class="swiper-wrapper product-image-thumbs" *ngIf="images">
-
-                                        <div class="swiper-slide"
-                                             *ngFor="let img of images;let currentElementIndex=index"
-                                             style="height: 26px; margin-bottom: 10px;">
-                                            <a class="thumb-link handtool" (click)="displayImage(currentElementIndex)" title=""
-                                               data-image-index="currentElementIndex">
-                                                <img src="{{img.ImageUrl}}" width="75" height="75" alt="">
-                                            </a>
-                                        </div>
-
-                                    </div>
-
-                                </div>
-                            </div>
+                <div role="alert" id="alertAddCart" class="alert alert-info collapse text-center">
+                    <strong>Successfully added to cart</strong>
+                </div>
+                <div class="sharingFormat">
+                    <div class="sharing-links">
+                        <div class="social-icon">
+                            <span>Share &nbsp;</span>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-pinterest"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-instagram"></i>
+                            </a>
                         </div>
+                    </div>
 
-                        <div class="product-shop" *ngIf="product">
-                            <div id="messages_product_view"></div>
+                </div>
+                <div class="wish-info">
+                    <a *ngIf="!_storeService.presentInWishlist(product.ProductID)" (click)="clickWish(product)"
+                       class="handtool"><i class="fa fa-heart-o">&nbsp;</i>Add to wishlist</a>
+                    <a *ngIf="_storeService.presentInWishlist(product.ProductID)" (click)="clickWish(product)"
+                       class="handtool"><i class="fa fa-heart text-danger">&nbsp;</i>Remove from wishlist</a>
 
-                            <div class="product-info-container">
-                                <div [innerHTML]="product.ProductShortDesc" class="product-subtitle"></div>
-                                <div class="product-name">
-                                    <span [innerHTML]="product.ProductName" class="h1"></span>
-                                </div>
-                                <div class="extra-info">
-                                </div>
+                </div>
 
-                                <div class="description" [innerHTML]="product.ProductLongDesc">
 
-                                </div>
-                                <div class="price-info">
-                                    <div class="price-box">
-                                        <span class="regular-price" id="product-price-13892">
-                                            <span class="price">{{product.ProductPrice | currency:'INR':'symbol'}}</span>
-                                        </span>
-
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="add-to-cart">
-                                        <label for="qty" class="productLabel">Quantity:</label><br><br>
-                                        <div class="qty-wrapper">
-
-                                            <input type="text" pattern="\d*" name="qty" id="prodqty" maxlength="12"
-                                                   value="1" title="Qty" class="input-text qty">
-                                        </div>
-                                        <div class="add-to-cart-buttons">
-                                            <button (click)="addToCart(product);" type="button" title="Add to Cart"
-                                                    class="button btn-cart">
-                                                Add to Cart
-                                            </button>
-                                        </div>
-
-                                    </div>
-                                    <div role="alert" id="alertAddCart" class="alert alert-info collapse">
-                                        <strong>Successfully added to cart</strong>
-                                    </div>
-                                </div>
-                                <div class="wishlistFormat">
-                                    <a *ngIf="!_storeService.presentInWishlist(product.ProductID)" (click)="clickWish(product)" 
-                                       class="handtool"><i class="fa fa-heart-o">&nbsp;</i>Add to wishlist</a>
-                                    <a *ngIf="_storeService.presentInWishlist(product.ProductID)" (click)="clickWish(product)" 
-                                       class="handtool"><i class="fa fa-heart text-danger">&nbsp;</i>Remove from wishlist</a>
-
-                                </div>
-
-                            </div>
-                            <div role="alert" id="alertWishAdd" class="alert alert-success collapse">
-                                <strong>Added to wishlist</strong>
-                            </div>
-                            <div role="alert" id="alertWishRemove" class="alert alert-success collapse">
-                                <strong>Removed from wishlist</strong>
-                            </div>
-                            <div class="zigzagBlk">&nbsp;&nbsp;</div>
-                            <div [innerHTML]="product.ProductCartDesc" class="product-standard-features product-standard-features-sideBar">
-
-                            </div>
-                        </div>
-                    </form>
+                <div role="alert" id="alertWishAdd" class="alert alert-success collapse">
+                    <strong>Added to wishlist</strong>
+                </div>
+                <div role="alert" id="alertWishRemove" class="alert alert-success collapse">
+                    <strong>Removed from wishlist</strong>
+                </div>
+                <div class="zigzagBlk">&nbsp;&nbsp;</div>
+                <!--[innerHTML]="product.ProductCartDesc"-->
+                <div class="sharing-links" [innerHTML]="product.ProductCartDesc">
                 </div>
             </div>
         </div>
-
+        <div class="col-1"></div>
     </div>
-</div>
 
+</div>
