--- a/TheWeb/src/app/account/account.component.css
+++ b/TheWeb/src/app/account/account.component.css
@@ -1,14 +1,38 @@
-﻿.ac-topleft {
+﻿.ac-box {
     background-color: #fff;
     border-radius: 2px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .08);
     padding: 12px;
     margin-bottom: 16px;
 }
-.ac-img{
-    width:50px;
-    height:50px;
-}
-.container{
 
+.ac-img {
+    width: 50px;
+    height: 50px;
+}
+
+.ac-actions {
+    /*border-bottom: 1px solid gray;*/
+    cursor: pointer;
+    font-size:large;
+    text-align:left;
+    font-weight:bold;
+    padding:5%;
+    border-bottom:.5px solid rgba(0, 0, 0, .08);
+    margin:0;
+    width:100%;
+    
+}
+/*.ac-actions a{
+    padding-left:10%;
+}*/
+
+    .ac-actions:hover {
+        color: #ad9268;
+    }
+    .ac-actions a:active{
+        text-decoration:none!important;
+    }
+.ac-action-active {
+    background-color: #d0d0d0;
 }
