--- a/TheWeb/src/app/account/account.component.html
+++ b/TheWeb/src/app/account/account.component.html
@@ -6,9 +6,10 @@
 
 <div class="main-container" *ngIf="access_token">
     <div class="row">
+        <div class="col-1"></div>
         <div class="col-md-4">
             <div class="ac-box">
-                <i class="fa fa-user-circle fa-5x"></i>
+                <i class="fa fa-user-circle fa-4x"></i>
                 <span class="text-center">
                     {{user.FirstName}}
                 </span>
@@ -25,9 +26,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-6">
             <router-outlet></router-outlet>
         </div>
-            
-        </div>
+        <div class="col-1"></div>
+    </div>
     </div>
