--- a/TheWeb/src/app/account/account.component.css
+++ b/TheWeb/src/app/account/account.component.css
@@ -36,3 +36,67 @@
 .ac-action-active {
     background-color: #d0d0d0;
 }
+.ac-addr-box {
+    border: solid 1px #e0e0e0;
+    background: #fff;
+    border-radius: 2px;
+}
+.ac-addr-add-box {
+    border: solid 1px #e0e0e0;
+    background: #fff;
+    border-radius: 2px;
+    margin-bottom: 30px;
+}
+.add-address {
+    font-size: 14px;
+    color: #2874f0;
+    font-weight: 500;
+    padding: 16px 0;
+    cursor: pointer;
+    text-align:center;
+}
+.add-image {
+    margin: 0 16px;
+    vertical-align: middle;
+}
+.add-type {
+    text-transform: uppercase;
+    font-size: 11px;
+    color: #878787;
+    vertical-align: middle;
+    padding: 4px 7px;
+    border-radius: 2px;
+    background-color: #f0f0f0;
+    font-weight: 500;
+    margin-right: 15px;
+    
+}
+.add-type-box{
+    padding:10px;
+}
+.add-name{
+    padding:10px;
+}
+.add-line {
+    margin-left: 10px;
+    display: block;
+    max-width: 523px;
+}
+.edit-box {
+    z-index: 1;
+    white-space: nowrap;
+    display: none;
+    position: absolute;
+    font-size: 14px;
+    color: #878787;
+    border: 1px solid rgba(0, 0, 0, .05);
+    box-shadow: 0 6px 6px 0 rgba(0, 0, 0, .12), 0 1px 3px 0 rgba(0, 0, 0, .18);
+    right: 23px;
+    padding: 5px;
+    border-radius: 3px;
+    top: 10px;
+}
+.edit-box-item {
+    padding: 7px 12px;
+    color: #212121;
+}
