--- a/TheWeb/src/app/css/header.css
+++ b/TheWeb/src/app/css/header.css
@@ -20,3 +20,9 @@ ol a {
 .quotation_div{
     height:20%;
 }
+.profile-box{
+    padding-right:20px;
+}
+.bg-dark {
+    background-color: #000000 !important;
+}
