--- a/TheWeb/src/app/footer.component.html
+++ b/TheWeb/src/app/footer.component.html
@@ -1,46 +1,53 @@
-﻿<footer class="main_footer">
-
-    <div class="top_footer">
-
-
-        <div class="container customize-container">
-            <div class="col-sm-12 col-md-8 col-xl-6">
-                <div class="col-group">
-                    <aside id="nav_menu-2" class="col-md-12 footer-widget widget_nav_menu">
-                        <div class="menu-footer-en-container">
-                            <ul id="menu-footer-en" class="menu">
-                                <li id="menu-item-1193" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1193">
-                                    <a href="#" class="menu-image-title-after"><span class="menu-image-title">SCREEN PRINT</span></a>
-                                    <ul class="sub-menu">
-                                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1194"><a href="#" class="menu-image-title-after"><span class="menu-image-title">SAREE</span></a></li>
-                                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1194"><a href="#" class="menu-image-title-after"><span class="menu-image-title">KURTA</span></a></li>
-
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </aside>
+﻿<footer>
+    <div class="footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                    <h3> Lorem Ipsum </h3>
+                    <ul>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                    </ul>
                 </div>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                    <h3> Lorem Ipsum </h3>
+                    <ul>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                    </ul>
+                </div>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                    <h3> Lorem Ipsum </h3>
+                    <ul>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                    </ul>
+                </div>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                    <h3> Lorem Ipsum </h3>
+                    <ul>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                    </ul>
+                </div>
+                <div class="col-lg-1  col-md-1 col-sm-6 col-xs-12">
 
-
+                </div>
+                <div class="col-lg-3  col-md-5 col-sm-6 col-xs-12">
+                    <ul class="social text-center">
+                        <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
+                        <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
+                        <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                        <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
+                        <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                    </ul>
+                </div>
             </div>
+            <!--/.row-->
 
-
-            <div class="col-sm-12 col-md-4 col-xl-6">
-                <br />
-                <div>
-                    
-                    <div class="social-icon hidden-xs">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                    </div>
-                </div>		<section id="footer_copyright-2" class="widget widget_footer_copyright"><div class="widget-wrap"><div id="footer-credits" class=" footer-right"><br /><span class="copyright">© DHONNI MEYE. ALL RIGHTS RESERVED 2018 </span><span></span></div><div class="clear"></div></div></section>
-            </div>
-
+            <div class="text-center text-capitalize">© Footer E-commerce Plugin 2014. All right reserved. </div>
         </div>
+        <!--/.container-->
     </div>
-
-    <div class="clearfix"></div>
+    <!--/.footer-->
 </footer>
