--- a/TheWeb/src/app/css/header.css
+++ b/TheWeb/src/app/css/header.css
@@ -26,3 +26,78 @@ ol a {
 .bg-dark {
     background-color: #000000 !important;
 }
+
+/* The overlay effect with black background */
+.overlay {
+    height: 100%;
+    width: 100%;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9); /* Black with a little bit see-through */
+    color: #ccc;
+    overflow-y:scroll;
+}
+.noscroll {
+    overflow: hidden;
+}
+
+/* The content */
+.overlay-content {
+    position: relative;
+    top: 8%;
+    width: 80%;
+    text-align: center;
+    margin-top: 10px;
+    margin: auto;
+}
+
+/* Close button */
+.overlay .closebtn {
+    position: absolute;
+    top: 10px;
+    right: 50px;
+    font-size: 30px;
+    cursor: pointer;
+    color: white;
+}
+
+    .overlay .closebtn:hover {
+        color: #ccc;
+    }
+
+/* Style the search field */
+.overlay input[type=text] {
+    padding: 15px;
+    font-size: 17px;
+    border: none;
+    float: left;
+    width: 80%;
+    background: white;
+}
+
+    .overlay input[type=text]:hover {
+        background: #f1f1f1;
+    }
+
+/* Style the submit button */
+.overlay button {
+    float: left;
+    width: 20%;
+    padding: 15px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
+
+    .overlay button:hover {
+        background: #bbb;
+    }
+.search-items{
+    padding:5px 0 5px 0;
+    font-size:50px;
+}
