--- a/TheWeb/src/app/header.component.html
+++ b/TheWeb/src/app/header.component.html
@@ -1,5 +1,5 @@
 ﻿<login-popup></login-popup>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
         <img src="https://s3.ap-south-1.amazonaws.com/elasticbeanstalk-ap-south-1-412611335750/dhonni-meye.png" width="270" height="36">
     </a>
@@ -57,22 +57,31 @@
                     <a href="javascript:void(0)" class="dropdown-item" (click)="account()">View profile</a>
                 </div>
             </div>
-            
+
         </div>
         <form class="form-inline my-2 my-lg-0">
             <!--<input class="form-control mr-sm-2" type="text" placeholder="Search" autocomplete="off">-->
 
-            <input class="form-control mr-sm-2" *ngIf="flag" type="text" [(ngModel)]="ProdName" (keyup)="searchProd(ProdName)" name="search"/>
-            <input class="form-control mr-sm-2" [(ngModel)]="ProdName" disabled *ngIf="!flag" type="text" name="search"/>
-            <div class="dropdown-menu" *ngIf="flag">
-                <ul>
-                    <li *ngFor="let prod of prodlist | async">
-                        <a (click)="onselectClient(prod)">{{prod.Name}}</a>
-                    </li>
-                </ul>
-            </div>
-            <button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
+            <input placeholder="Search" class="form-control mr-sm-2" type="text" name="search" (click)="openSearch()" />
+
+            <!--<button class="btn btn-success my-2 my-sm-0" type="button">Search</button>-->
         </form>
+        <div id="myOverlay" class="overlay">
+            <span class="closebtn" (click)="closeSearch()" title="Close Overlay">x</span>
+            <div class="overlay-content">
+                <form id="searchform">
+                    <input placeholder="Search" class="form-control" *ngIf="flag" type="text" [(ngModel)]="ProdName" (keyup)="searchProd(ProdName)"
+                           name="search" (click)="openSearch()" id="searchbox"/>
+                    <button class="btn btn-success" type="button">Search</button>
+                    <input class="form-control mr-sm-2" [(ngModel)]="ProdName" disabled *ngIf="!flag" type="text" name="search" />
+                    <div *ngIf="flag">
+                        <div (click)="onselectProd(prod)" class="text-left search-items handtool" *ngFor="let prod of prodlist | async">
+                            {{prod.Name}}
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </nav>
 
