--- a/TheWeb/src/app/login/register.component.html
+++ b/TheWeb/src/app/login/register.component.html
@@ -1,4 +1,4 @@
-﻿<div class="box">
+﻿<!--<div class="box">
     <div class="content registerBox" style="display:none;">
         <div class="form">
             <form novalidate (ngSubmit)="register()" [formGroup]="registerForm">
@@ -12,4 +12,42 @@
     <br />
     <br />
     <div *ngIf="statusMessage" class="alert alert-success"><strong>{{statusMessage}}</strong></div>
+</div>-->
+
+<h1>Sign Up</h1>
+<p>Please fill in this form to create an account.</p>
+<hr>
+<div class="social">
+    <button class="btn google" (click)="googlesign()">
+        <i class="fa fa-google-plus fa-fw"></i>
+    </button>
+    <button class="btn facebook" href="#">
+        <i class="fa fa-facebook fa-fw"></i>
+    </button>
 </div>
+<hr>
+<form novalidate (ngSubmit)="register()" [formGroup]="registerForm">
+    <label for="email"><b>Email</b></label>
+    <input formControlName="email" id="reg-email" placeholder="Enter Email" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input formControlName="password" id="reg-password" type="password" placeholder="Enter Password" required>
+
+    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <input formControlName="password_confirmation" id="reg-password_confirmation" type="password" placeholder="Repeat Password" required>
+    <hr>
+
+
+    <p>By creating an account you agree to our<a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+    
+    <div *ngIf="statusMessage" class="alert alert-success"><br /><strong>{{statusMessage}}</strong></div>
+
+    <div class="clearfix">
+        <button type="button" onclick="document.getElementById('loginModal').style.display='none'" class="cancelbtn">Cancel</button>
+        <button type="submit" class="signupbtn">Sign Up</button>
+    </div>
+    <div class="forgot register-footer">
+        <span>Already have an account?</span>
+        <a href="javascript:void(0);" (click)="_miscServ.changeLoginPopupStatus()">Login</a>
+    </div>
+</form>
