--- a/TheWeb/src/app/login/register.component.html
+++ b/TheWeb/src/app/login/register.component.html
@@ -1,39 +1,34 @@
-﻿<!--<div class="box">
-    <div class="content registerBox" style="display:none;">
-        <div class="form">
-            <form novalidate (ngSubmit)="register()" [formGroup]="registerForm">
-                <input formControlName="email" id="reg-email" class="form-control" type="text" placeholder="Email" value="kamalesh.das@capgemini.com">
-                <input formControlName="password" id="reg-password" class="form-control" type="password" placeholder="Password" value="Pass=1234">
-                <input formControlName="password_confirmation" id="reg-password_confirmation" class="form-control" type="password" placeholder="Repeat Password" value="Pass=1234">
-                <input class="checkout-button" type="submit" value="Create account" name="commit">
-            </form>
-        </div>
-    </div>
-    <br />
-    <br />
-    <div *ngIf="statusMessage" class="alert alert-success"><strong>{{statusMessage}}</strong></div>
-</div>-->
-
-<h1>Sign Up</h1>
+﻿<h1>Sign Up</h1>
 <p>Please fill in this form to create an account.</p>
 <hr>
-<div class="social">
-    <button class="btn google" (click)="googlesign()">
-        <i class="fa fa-google-plus fa-fw"></i>
-    </button>
-    <button class="btn facebook" href="#">
-        <i class="fa fa-facebook fa-fw"></i>
-    </button>
+<div class="row social">
+    <div class="col-md-6">
+        <button class="btn google" (click)="googlesign()">
+            <i class="fa fa-google-plus fa-fw"></i>
+        </button>
+    </div>
+    <div class="col-md-6">
+        <button class="btn facebook" href="#">
+            <i class="fa fa-facebook fa-fw"></i>
+        </button>
+    </div>
+    
 </div>
 <hr>
-<form novalidate (ngSubmit)="register()" [formGroup]="registerForm">
-    <label for="email"><b>Email</b></label>
-    <input formControlName="email" id="reg-email" placeholder="Enter Email" required>
+<div class="form">
 
-    <label for="psw"><b>Password</b></label>
+</div>
+<form novalidate (ngSubmit)="register()" [formGroup]="registerForm">
+    <div>
+
+    </div>
+    <label for="reg-email"><b>Email</b></label>
+    <input formControlName="email" id="reg-email" placeholder="Enter Email" type="text" required>
+
+    <label for="reg-password"><b>Password</b></label>
     <input formControlName="password" id="reg-password" type="password" placeholder="Enter Password" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <label for="reg-password_confirmation"><b>Repeat Password</b></label>
     <input formControlName="password_confirmation" id="reg-password_confirmation" type="password" placeholder="Repeat Password" required>
     <hr>
 
